# document-md-mcp

./: .gitignore  README.md  pyproject.toml  server.py
src/document_md_mcp/: __init__.py  server.py
