[project]
name = "document-md-mcp"
version = "0.1.0"
description = "MCP server for converting DOCX and PDF files into Markdown plus extracted images."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "python-docx>=1.1.0",
    "PyMuPDF>=1.24.0",
]

[project.scripts]
document-md-mcp = "document_md_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
